--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
     </ol>
     <h2>INDEX</h2>
     <p><strong>Web (manufacturing)</strong>, continuous sheets of material passed over rollers</p>
+    <p>You can get some information about HTML, CSS, JavaScript on this WEBsite.</p>
+    <image src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8d2Vic2l0ZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
 </body>
