--- a/3.html
+++ b/3.html
@@ -12,5 +12,6 @@
         <li><a href="3.html">JavaScript</a></li>
     </ol>
     <h2>JacaScript</h2>
-    <p>abbreviated as<strong>JS</strong>, is a programming language that conforms to the ECMAScript specification.</p>
+    <p>abbreviated as <strong>JS</strong>, is a programming language that conforms to the ECMAScript specification.</p>
+    <image src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8anN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
 </body>
