--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 <head>
     <title>WEB1 - welcome</title>
     <meta charset="utf-8">
+    <style>
+        a{
+            color:blue;
+            text-decoration: none;
+        }
+        h1{
+            text-align: center;
+        }
+        h2{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="font-size: 70px;">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>INDEX</h2>
+    <h2 style="color:red; text-decoration: underline;">INDEX</h2>
     <p><strong>Web (manufacturing)</strong>, continuous sheets of material passed over rollers</p>
     <p>You can get some information about HTML, CSS, JavaScript on this WEBsite.</p>
     <image src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8d2Vic2l0ZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cRsnV6QEBdw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
 </body>
