--- a/1.html
+++ b/1.html
@@ -3,15 +3,23 @@
 <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
+    <style>
+        a {
+            color:rgb(236, 236, 45);
+            text-decoration: none;
+        }
+
+    </style>
+
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="font-size:70px">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
+        <li><a href="1.html" style="color:red">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>HTML</h2>
+    <h2 style="color:red; text-decoration: underline;">HTML</h2>
     <p><strong><a href="https://www.w3.org/TR/html52/" target="_blank" title="html specification">Hypertext Markup Language</a></strong> is a fucking good 
     and sexy language.<br> You have to know how 
     this language is beautiful!</p> This is soooooo fucking
