--- a/2.html
+++ b/2.html
@@ -3,15 +3,21 @@
 <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
+    <style>
+        a{
+            color:salmon;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="font-size: 70px;">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
+        <li><a href="2.html" style="color:red">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>CSS</h2>
+    <h2 style="color:red; text-decoration: underline;">CSS</h2>
     <p><strong><a href="https://developer.mozilla.org/ko/docs/Web/CSS" title="CSS Information"  target="_blank">Cascading Style Sheets (CSS)</a></strong> is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.</p>
     <image src="https://images.unsplash.com/photo-1472437774355-71ab6752b434?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8Y3NzfGVufDB8fDB8&auto=format&fit=crop&w=900&q=60" width="100%">
 </body>
