--- a/3.html
+++ b/3.html
@@ -3,15 +3,21 @@
 <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
+    <style>
+        a{
+            color:seagreen;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="font-size: 70px;">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
+        <li><a href="3.html" style="color:red">JavaScript</a></li>
     </ol>
-    <h2>JacaScript</h2>
+    <h2 style="color:red; text-decoration: underline;">JacaScript</h2>
     <p>abbreviated as <strong>JS</strong>, is a programming language that conforms to the ECMAScript specification.</p>
     <image src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8anN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
 </body>
