--- a/1.html
+++ b/1.html
@@ -1,29 +1,31 @@
 <!doctype html>
 <html>
 <head>
-    <title>WEB1 - html</title>
+    <title>SHIN'S HOME</title>
     <meta charset="utf-8">
     <style>
-        a {
-            color:rgb(236, 236, 45);
+        a{
             text-decoration: none;
         }
-
+        h1{
+            text-align: center;
+        }
     </style>
-
 </head>
 <body>
-    <h1><a href="index.html" style="font-size:70px">WEB</a></h1>
+    <h1><a href="index.html" style="font-size: 70px;">재혁'S 홈페이지</a></h1>
     <ol>
-        <li><a href="1.html" style="color:red">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2 style="color:red; text-decoration: underline;">HTML</h2>
-    <p><strong><a href="https://www.w3.org/TR/html52/" target="_blank" title="html specification">Hypertext Markup Language</a></strong> is a fucking good 
-    and sexy language.<br> You have to know how 
-    this language is beautiful!</p> This is soooooo fucking
-    good, and you should have to know that.
-    <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8Y29kaW5nfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
-    <br><br><br>
+        <li><a href="1.html" style="color:crimson; font-size: 30px;">최근 보고 있는 Youtube 채널</a></li><br>
+        <li><a href="2.html">최근 관심을 가지고 있는 주제</a></li><br>
+        <li><a href="3.html">먹고 싶은 음식</a></li><br>
+    </ol><br>
+    <p>최근 다양한 유튜브 영상을 시청하고 있는데, 주로 알고리즘의 추천을 받거나 자신의 관심사대로 영상을 시청하는 경향을 보이고 있습니다. 
+    <a href="https://namu.wiki/w/%EC%8A%B9%EC%9A%B0%EC%95%84%EB%B9%A0" style="text-decoration: underline;">승우아빠</a>, 
+    <a href="https://namu.wiki/w/%EB%A0%88%EC%9D%B4%EB%A8%BC%20%ED%82%B4" style="text-decoration: underline;">레이먼킴</a>,
+    <a href="https://namu.wiki/w/%EC%9C%A1%EC%8B%9D%EB%A7%A8" style="text-decoration: underline;"> 육식맨</a>,싱어게인, T1 유튜브, 
+    <a href="https://namu.wiki/w/%EB%A0%88%EB%B0%94" style="text-decoration: underline;">레바</a>, 검은사막 및 POE 유튜브 등 다양한 주제에 관심을 가지고 유튜브 영상을 시청 중인 모습을 볼 수 있습니다.
+    </p>
+    
+    <image src="https://images.unsplash.com/photo-1567443024551-f3e3cc2be870?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8eW91dHViZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
+   
 </body>
