--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <title>WEB1 - welcome</title>
+    <title>SHIN'S HOME</title>
     <meta charset="utf-8">
     <style>
         a{
-            color:blue;
+            color:black;
             text-decoration: none;
         }
         h1{
@@ -17,17 +17,15 @@
     </style>
 </head>
 <body>
-    <h1><a href="index.html" style="font-size: 70px;">WEB</a></h1>
+    <h1><a href="index.html" style="font-size: 70px;">재혁'S 홈페이지</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
-    </ol>
+        <li><a href="1.html">최근 보고 있는 Youtube 채널</a></li><br>
+        <li><a href="2.html">최근 관심을 가지고 있는 주제</a></li><br>
+        <li><a href="3.html">먹고 싶은 음식</a></li><br>
+    </ol><br>
     <h2 style="color:red; text-decoration: underline;">INDEX</h2>
-    <p><strong>Web (manufacturing)</strong>, continuous sheets of material passed over rollers</p>
-    <p>You can get some information about HTML, CSS, JavaScript on this WEBsite.</p>
-    <image src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8d2Vic2l0ZXxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
-    <p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/cRsnV6QEBdw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
+    <p>이 홈페이지는 <strong style="text-decoration: underline; color:blueviolet; font-size: 30px;">신재혁</strong>이 본인의 웹사이트 개설 능력을 점검하면서, 자유 주제에 대해 언급하는 공간입니다.</p>
+    <p>You can get some information about jaehyeok Shin on this WEBsite.</p>
+    <image src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2F0fGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" width="100%">
+   
 </body>
